www/css/homepage.css
/*
    Document   : homepage
    Created on : May 26, 2009, 2:38:22 PM
    Author     : Kellen Donohue
    Description: Style sheets
*/

body {
  background-color: #003F87;
  color: white;
  font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 11pt;
  margin: 10px;
  text-align: center;
}

a {
  font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
  font-weight: 700;
  font-style: normal;
  color: lightgrey;
}

#intro {
  position: relative;
}

#intro, #mainContent {
  margin-left: 4%;
}

.box {
    margin: 0 10px;
    border: 5px solid;
    background-color: blue;
    padding: 10px;
    border-radius: 5px;
}

.left {
  width: 44%;
}

.right {
  width: 46%;
  left: 48%;
  top: 0;
  position: absolute;
}

#resume {
  margin-top: 20px;
  top: 190px;
}

h2 {
    margin: 0px;
}

#aboutMe h3 {
    text-decoration: underline;
    margin-bottom: 0;
}

.invisibleBox {
    margin: 10px;
    padding: 10px;
    padding-bottom: 5px;
    padding-top: 5px;
    border: 5px solid #003F87;
}

#mainContent {
    margin-top: 20px;
    position: relative;
}

#name {
    height: 200px;
    line-height: 200px;
    margin: 0;
    padding: 0px;
}

#contactInfo a {
    font-weight: 400;
}

#contactInfo table {
	margin-left: auto;
	margin-right: auto;
  margin-top: 1em;
  margin-bottom: 1em;
}

#contactInfo tr {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

#topPic {
    border:  5px solid;
}

@media screen and (max-width: 700px) {
  .left, .right {
    width: 92%;
    position: static;
  }

  .box {
    margin: 0;
  }

  body {
    margin-left: 0;
  }

  #contactInfo {
    margin-top: 20px;
    overflow: scroll;
  }
}

